--- a/widget/html/patient.html
+++ b/widget/html/patient.html
@@ -160,11 +160,13 @@ function checkPatientName() {
                 column: 'name',
                 value: $api.byId('name').value
             });
-            query.whereEqual({
-                qid: queryId,
-                column: 'record_doctor',
-                value: userName
-            });
+            if (userName != "admin") {
+                query.whereEqual({
+                    qid: queryId,
+                    column: 'record_doctor',
+                    value: userName
+                });
+            }
             var patients = [];
             model.findAll({
                 class: "patient",
@@ -180,7 +182,7 @@ function checkPatientName() {
                             idx = idx + 1;
                         }
                         if (idx > 0) {
-                            if (confirm("存在同名患者！\n\n【取消】- 继续新增\n【确定】- 查看已有患者信息")) {
+                            if (confirm("已有同名患者！\n\n【取消】- 继续新增\n【确定】- 查看已有患者信息")) {
                                 showDupHistoryList(patients);
                             }
                         }
