--- a/widget/historyList.html
+++ b/widget/historyList.html
@@ -21,12 +21,23 @@
             <div id="middle">
                 <span id="title">病历列表</span>
             </div>
-            <a id="right" tapmode="" onclick="openSearch();" class="button button-raised button-royal">
+            <!--             <a id="right" tapmode="" onclick="openSearch();" class="button button-raised button-royal">
                     查找
                 </a>
             <a id="right" tapmode="" onclick="openWin('history');" class="button button-raised button-royal">
                     新建
-                </a>
+                </a> -->
+            <nav>
+                <ul>
+                    <!-- <li><a tapmode="" class="button button-raised button-royal">更多</a> -->
+                    <li><a tapmode="">更多</a>
+                        <ul>
+                            <li><a tapmode="" onclick="openWin('history');">新建</a></li>
+                            <li><a tapmode="" onclick="openSearch();">查找</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <div id="main" class="flex-con">
         </div>
