样式优化，整体字体及结构变小，右上角恢复两个按钮

--- a/widget/historyList.html
+++ b/widget/historyList.html
@@ -19,17 +19,16 @@
                     退出
                 </a>
             <div id="middle">
-                <span id="title">病历列表</span>
+                <span id="title"></span>
             </div>
-            <!--             <a id="right" tapmode="" onclick="openSearch();" class="button button-raised button-royal">
+            <a id="rightleft" tapmode="" onclick="openSearch();" class="button button-raised button-royal">
                     查找
                 </a>
             <a id="right" tapmode="" onclick="openWin('history');" class="button button-raised button-royal">
                     新建
-                </a> -->
-            <nav>
+                </a>
+            <!--             <nav>
                 <ul>
-                    <!-- <li><a tapmode="" class="button button-raised button-royal">更多</a> -->
                     <li><a tapmode="">更多</a>
                         <ul>
                             <li><a tapmode="" onclick="openWin('history');">新建</a></li>
@@ -37,7 +36,7 @@
                         </ul>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
         </header>
         <div id="main" class="flex-con">
         </div>
