--- a/widget/html/viewFullHistory.html
+++ b/widget/html/viewFullHistory.html
@@ -15,19 +15,18 @@
     <div id="wrap" class="flex-wrap flex-vertical">
         <header id='header'>
             <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
-                    返回
+                    &lt; 返回
                 </a>
             <div id="middle">
-                <span id="title">病历浏览</span>
+                <span id="title"></span>
             </div>
-<!-- <a id="right" tapmode="" onclick="openWin('followupList');" class="button button-raised button-royal">
+            <a id="rightleft" tapmode="" onclick="openWin('followupList');" class="button button-raised button-royal">
                     随访
                 </a>
-<a id="right" tapmode="" onclick="openWin('modiHistory');" class="button button-raised button-royal">
+            <a id="right" tapmode="" onclick="openWin('modiHistory');" class="button button-raised button-royal">
                     修改
                 </a>
- -->
-            <nav>
+            <!--             <nav>
                 <ul>
                     <li><a tapmode="">更多</a>
                         <ul>
@@ -36,7 +35,7 @@
                         </ul>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
         </header>
         <div id="main" class="flex-con">
             <div class="groupName">基本信息</div>
