--- a/widget/historyList.html
+++ b/widget/historyList.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src="./script/api.js"></script>
     <script type="text/javascript" src="./script/historyList.js"></script>
     <script type="text/javascript" src="./script/util.js"></script>
+    <script type="text/javascript" src="./script/historyDB.js"></script>
+    <script type="text/javascript" src="./script/historySql.js"></script>
 </head>
 
 <body>
