heaer的UI优化，包括增加彩色按钮，字体大小颜色优化，各页面去除垂直滚动条

--- a/widget/html/dupHistoryList.html
+++ b/widget/html/dupHistoryList.html
@@ -207,6 +207,7 @@ function viewHistory(history_id) {
         pageParam: {
             history_id: history_id
         },
+        vScrollBarEnabled: false,
         reload: false,
         bounces: false
     });
