--- a/widget/html/followup.html
+++ b/widget/html/followup.html
@@ -20,7 +20,7 @@
             <div id="middle">
                 <span id="title">随访信息</span>
             </div>
-            <a id="right" tapmode="" onclick="saveFollowUp();" class="button button-raised button-royal">
+            <a id="right" tapmode="" onclick="saveFollowUp();" class="button button-raised button-blue">
                     保存
                 </a>
         </header>
