--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -20,7 +20,7 @@
             <div id="middle">
                 <span id="title">病历维护</span>
             </div>
-            <a id="right" tapmode="" onclick="saveHistory();" class="button button-raised button-royal">
+            <a id="right" tapmode="" onclick="saveHistory();" class="button button-raised button-blue">
                     保存
                 </a>
         </header>
@@ -266,6 +266,7 @@ function openWin(type) {
         },
         reload: true,
         bounces: false,
+        vScrollBarEnabled: false,
         animation: {
             type: "movein",
             subType: "from_right",
