--- a/widget/html/physical.html
+++ b/widget/html/physical.html
@@ -20,7 +20,7 @@
             <div id="middle">
                 <span id="title">体检信息维护</span>
             </div>
-            <a id="right" tapmode="" onclick="savePhysical();" class="button button-raised button-royal">
+            <a id="right" tapmode="" onclick="savePhysical();" class="button button-raised button-blue">
                 保存
             </a>
         </header>
