--- a/widget/html/viewFollowUp.html
+++ b/widget/html/viewFollowUp.html
@@ -84,6 +84,7 @@ function modiFollowUp() {
             follow_up: follow_up,
             index: index
         },
+        vScrollBarEnabled: false,
         reload: true,
         bounces: false
     });
