--- a/widget/html/viewFullHistory.html
+++ b/widget/html/viewFullHistory.html
@@ -402,6 +402,7 @@ function openWin(type) {
             type: "movein",
             duration: 300
         },
+        vScrollBarEnabled: false,
         reload: reload,
         bounces: false
     });
