--- a/widget/html/viewHistory.html
+++ b/widget/html/viewHistory.html
@@ -204,6 +204,7 @@ function openWin(type) {
             type: "movein",
             duration: 300
         },
+        vScrollBarEnabled: false,
         reload: reload,
         bounces: false
     });
