--- a/widget/html/viewPatient.html
+++ b/widget/html/viewPatient.html
@@ -181,6 +181,7 @@ function modiPatient() {
             type: "movein",
             duration: 300
         },
+        vScrollBarEnabled: false,
         reload: true,
         bounces: false
     });
