--- a/widget/html/viewPhysical.html
+++ b/widget/html/viewPhysical.html
@@ -222,6 +222,7 @@ function modiPhysical() {
             type: "movein",
             duration: 300
         },
+        vScrollBarEnabled: false,
         reload: true,
         bounces: false
     });
