--- a/widget/html/followup.html
+++ b/widget/html/followup.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>随访信息</title>
-    <link rel="stylesheet" type="text/css" href="../css/historyModi.css" />
+    <link rel="stylesheet" type="text/css" href="../css/history.css" />
     <link rel="stylesheet" type="text/css" href="../css/button.css" />
     <script type="text/javascript" src="../script/api.js"></script>
     <script type="text/javascript" src="../script/util.js"></script>
 </head>
 
-<body>
+<body class="body-silver">
     <div id="wrap" class="flex-wrap flex-vertical">
-        <header>
-            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
-                    取消
+        <header class="header-silver">
+            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-silver">
+                    &lt; 取消
                 </a>
             <div id="middle">
                 <span id="title">随访信息</span>
@@ -32,7 +32,7 @@
                         <input type="text" id="follow_up_date"></input>
                     </div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field textarea_field bottom">
                     <div class="textarea_key">随访内容</div>
                     <div class="textarea_value">
                         <textarea id="follow_up_info" placeholder="请输入随访内容"></textarea>
