--- a/widget/html/followupList.html
+++ b/widget/html/followupList.html
@@ -11,10 +11,10 @@
     <script type="text/javascript" src="../script/util.js"></script>
 </head>
 
-<body>
+<body class="body-silver">
     <div id="wrap" class="flex-wrap flex-vertical">
-        <header>
-            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
+        <header class="header-silver">
+            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-silver">
                     &lt; 返回
                 </a>
             <div id="middle">
@@ -66,39 +66,39 @@ apiready = function() {
         },
         data: data,
         rightBtns: [{
-            bgColor: '#B3A689',
+            bgColor: '#d5d7dc',
             activeBgColor: '',
             width: 70,
             title: '修改',
             titleSize: 14,
-            titleColor: '#655A55',
+            titleColor: '#424758',
             icon: '',
             iconWidth: 20
         }, {
-            bgColor: '#B3A689',
+            bgColor: '#d5d7dc',
             activeBgColor: '',
             width: 70,
             title: '删除',
             titleSize: 14,
-            titleColor: '#655A55',
+            titleColor: '#424758',
             icon: '',
             iconWidth: 20
         }],
         styles: {
-            borderColor: '#B1A686',
+            borderColor: '#f0f0f0',
             item: {
-                bgColor: '#E2D9C6',
-                activeBgColor: '#B1A686',
+                bgColor: '#FFF',
+                activeBgColor: '#d5d7dc',
                 height: 80,
                 imgWidth: 40,
                 imgHeight: 40,
                 imgCorner: 4,
                 placeholderImg: '',
-                titleSize: 20,
-                titleColor: '#655A55',
+                titleSize: 18,
+                titleColor: '#424758',
                 subTitleSize: 14.0,
-                subTitleColor: '#C5A686',
-                remarkColor: '#655A55',
+                subTitleColor: '#93979e',
+                remarkColor: '#424758',
                 remarkSize: 14,
                 remarkIconWidth: 30
             }
