--- a/widget/html/picker/condepPickerFrame.html
+++ b/widget/html/picker/condepPickerFrame.html
@@ -12,17 +12,17 @@
     <script type="text/javascript" src="../../script/constants.js"></script>
 </head>
 
-<body>
+<body class="body-silver">
     <div class="flex-wrap flex-vertical">
-        <header id='header'>
+        <header class='header-silver'>
             <nav id="nav">
-                <a id="left" tapmode="" onclick="window.closeFrame();" class="button button-raised button-royal">
+                <a id="left" tapmode="" onclick="window.closeFrame();" class="button button-raised button-silver">
                     取消
                 </a>
                 <div id="middle">
                     <span id="title">请选择</span>
                 </div>
-                <a id="right" tapmode="" onclick="window.saveFrame();" class="button button-raised button-royal">
+                <a id="right" tapmode="" onclick="window.saveFrame();" class="button button-raised button-silver">
                     确定
                 </a>
             </nav>
@@ -61,8 +61,8 @@ apiready = function() {
         },
         styles: {
             bg: 'rgba(0,0,0,0)',
-            normalColor: '#E1D7CA',
-            selectedColor: '#655A55',
+            normalColor: '#93979e',
+            selectedColor: '#424758',
             selectedSize: 36,
             tagColor: '#3685dd',
             tagSize: 10
