--- a/widget/html/viewFollowUp.html
+++ b/widget/html/viewFollowUp.html
@@ -11,16 +11,16 @@
     <script type="text/javascript" src="../script/util.js"></script>
 </head>
 
-<body>
+<body class="body-silver">
     <div id="wrap" class="flex-wrap flex-vertical">
-        <header>
-            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
+        <header class="header-silver">
+            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-silver">
                     &lt; 返回
                 </a>
             <div id="middle">
                 <span id="title">随访信息</span>
             </div>
-            <a id="right" tapmode="" onclick="modiFollowUp();" class="button button-raised button-royal">
+            <a id="right" tapmode="" onclick="modiFollowUp();" class="button button-raised button-silver">
                     修改
                 </a>
         </header>
@@ -32,7 +32,7 @@
                         <input type="text" id="follow_up_date"></input>
                     </div>
                 </div>
-                <div class="field textarea_field">
+                <div class="field textarea_field bottom">
                     <div class="textarea_key">随访内容</div>
                     <div class="textarea_value">
                         <textarea id="follow_up_info" placeholder="请输入随访内容"></textarea>
