--- a/widget/html/viewFullHistory.html
+++ b/widget/html/viewFullHistory.html
@@ -11,19 +11,19 @@
     <script type="text/javascript" src="../script/util.js"></script>
 </head>
 
-<body>
+<body class="body-silver">
     <div id="wrap" class="flex-wrap flex-vertical">
-        <header id='header'>
-            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
+        <header id='header' class="header-silver">
+            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-silver">
                     &lt; 返回
                 </a>
             <div id="middle">
                 <span id="title"></span>
             </div>
-            <a id="rightleft" tapmode="" onclick="openWin('followupList');" class="button button-raised button-royal">
+            <a id="rightleft" tapmode="" onclick="openWin('followupList');" class="button button-raised button-silver">
                     随访
                 </a>
-            <a id="right" tapmode="" onclick="openWin('modiHistory');" class="button button-raised button-royal">
+            <a id="right" tapmode="" onclick="openWin('modiHistory');" class="button button-raised button-silver">
                     修改
                 </a>
             <!--             <nav>
@@ -41,31 +41,31 @@
             <div class="groupName">基本信息</div>
             <div class="group">
                 <div class="field">
-                    <div class="key">姓名:</div>
+                    <div class="key">姓名</div>
                     <div class="value">
                         <input type="text" id="name" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="key">性别:</div>
+                    <div class="key">性别</div>
                     <div class="value">
                         <input type="text" id="gender" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="key">出生日期:</div>
+                    <div class="key">出生日期</div>
                     <div class="value">
                         <input type="text" id="birthday" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="key">年龄:</div>
+                    <div class="key">年龄</div>
                     <div class="value">
                         <input type="text" id="age" />
                     </div>
                 </div>
                 <div class="field bottom">
-                    <div class="key">职业:</div>
+                    <div class="key">职业</div>
                     <div class="value">
                         <input type="text" id="job" />
                     </div>
@@ -74,13 +74,13 @@
             <div class="groupName">编号</div>
             <div class="group">
                 <div class="field">
-                    <div class="key">住院号:</div>
+                    <div class="key">住院号</div>
                     <div class="value">
                         <input type="text" id="admission_number" />
                     </div>
                 </div>
                 <div class="field bottom">
-                    <div class="key">门诊号:</div>
+                    <div class="key">门诊号</div>
                     <div class="value">
                         <input type="text" id="outpatient_number" />
                     </div>
@@ -89,13 +89,13 @@
             <div class="groupName">联系方式</div>
             <div class="group">
                 <div class="field">
-                    <div class="key">电话:</div>
+                    <div class="key">电话</div>
                     <div class="value">
                         <input type="text" id="phone" />
                     </div>
                 </div>
                 <div class="field textarea_field bottom">
-                    <div class="textarea_key">地址:</div>
+                    <div class="textarea_key">地址</div>
                     <div class="textarea_value">
                         <textarea id="address"></textarea>
                     </div>
