--- a/widget/html/viewPatient.html
+++ b/widget/html/viewPatient.html
@@ -28,31 +28,31 @@
             <div class="groupName">基本信息</div>
             <div class="group">
                 <div class="field">
-                    <div class="key">姓名:</div>
+                    <div class="key">姓名</div>
                     <div class="value">
                         <input type="text" id="name" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="key">性别:</div>
+                    <div class="key">性别</div>
                     <div class="value">
                         <input type="text" id="gender" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="key">出生日期:</div>
+                    <div class="key">出生日期</div>
                     <div class="value">
                         <input type="text" id="birthday" />
                     </div>
                 </div>
                 <div class="field">
-                    <div class="key">年龄:</div>
+                    <div class="key">年龄</div>
                     <div class="value">
                         <input type="text" id="age" />
                     </div>
                 </div>
                 <div class="field bottom">
-                    <div class="key">职业:</div>
+                    <div class="key">职业</div>
                     <div class="value">
                         <input type="text" id="job" />
                     </div>
@@ -61,13 +61,13 @@
             <div class="groupName">编号</div>
             <div class="group">
                 <div class="field">
-                    <div class="key">住院号:</div>
+                    <div class="key">住院号</div>
                     <div class="value">
                         <input type="text" id="admission_number" />
                     </div>
                 </div>
                 <div class="field bottom">
-                    <div class="key">门诊号:</div>
+                    <div class="key">门诊号</div>
                     <div class="value">
                         <input type="text" id="outpatient_number" />
                     </div>
@@ -76,13 +76,13 @@
             <div class="groupName">联系方式</div>
             <div class="group">
                 <div class="field">
-                    <div class="key">电话:</div>
+                    <div class="key">电话</div>
                     <div class="value">
                         <input type="text" id="phone" />
                     </div>
                 </div>
                 <div class="field textarea_field bottom">
-                    <div class="textarea_key">地址:</div>
+                    <div class="textarea_key">地址</div>
                     <div class="textarea_value">
                         <textarea id="address"></textarea>
                     </div>
