--- a/widget/html/physical.html
+++ b/widget/html/physical.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>体检信息维护</title>
-    <link rel="stylesheet" type="text/css" href="../css/historyModi.css" />
+    <link rel="stylesheet" type="text/css" href="../css/history.css" />
     <link rel="stylesheet" type="text/css" href="../css/button.css" />
     <script type="text/javascript" src="../script/api.js"></script>
     <script type="text/javascript" src="../script/util.js"></script>
 </head>
 
-<body>
+<body class="body-silver">
     <div class="flex-wrap flex-vertical">
-        <header>
-            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-royal">
-                取消
+        <header class="header-silver">
+            <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-silver">
+                &lt; 取消
             </a>
             <div id="middle">
                 <span id="title">体检信息维护</span>
