--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -79,200 +79,18 @@
  * @return {[type]} [description]
  */
 apiready = function() {
-    window.closeWin = function(winName) {
-        api.closeWin();
-    }
-
-    userName = $api.getStorage("userName");
-
-    history_id = "";
-    patient_id = "";
-    physical_id = "";
-    data = [];
-
-    // 会诊科室使用选择器
-    $api.attr($api.byId('consultation_department'), 'readonly', 'true');
-    // 回填Picker返回的会诊科室
-    api.addEventListener({
-        name: 'returnCondep'
-    }, function(ret, err) {
-        if (ret) {
-            $api.byId('consultation_department').value = ret.value.consultation_department;
-        }
-    });
-
-    // 如果是修改，则先查询
-    type = api.pageParam.type;
-    if (type == "modi") {
-        history_id = api.pageParam.history_id;
-        getHistory(history_id);
-    }
-
-    // 新增患者信息，本页面需要知道patient_id
-    api.addEventListener({
-        name: 'patientAddEvent'
-    }, function(ret, err) {
-        if (ret && ret.value) {
-            patient_id = ret.value.patient_id;
-        }
-    });
-
-    // 新增体检信息，本页面需要知道physical_id
-    api.addEventListener({
-        name: 'physicalAddEvent'
-    }, function(ret, err) {
-        if (ret && ret.value) {
-            physical_id = ret.value.physical_id;
-        }
-    });
-}
-
-/**
- * [getHistory description]
- * @param  {[type]} history_id [description]
- * @return {[type]}            [description]
- */
-function getHistory(history_id) {
-    showProgress();
-    model = api.require('model');
-    query = api.require('query');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
-    });
-    query.createQuery(function(ret, err) {
-        if (ret && ret.qid) {
-            model.findById({
-                class: "caseHistory",
-                id: history_id
-            }, function(ret, err) {
-                if (err) {
-                    hideProgress();
-                    alert(JSON.stringify(err));
-                } else {
-                    if (ret) {
-                        hideProgress();
-                        setHistory(ret);
-                        patient_id = ret.patient_pointer;
-                        physical_id = ret.physical_pointer;
-                    }
-                }
-            });
-        }
-    });
-}
-
-/**
- * [saveHistory 保存病历信息]
- * @return {[type]} [description]
- */
-function saveHistory() {
-    showProgress();
-    if (patient_id == undefined || patient_id == null || patient_id == "") {
-        alert("请首先新增患者信息");
-        hideProgress();
-        return;
-    }
-
-    var consultation_department = $api.byId('consultation_department');
-    var chief_complaint = $api.byId('chief_complaint');
-    var diagnosis = $api.byId('diagnosis');
-    var treatment = $api.byId('treatment');
-
-    var model = api.require('model');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
-    });
-    if (type == "modi") {
-        model.updateById({
-            class: 'caseHistory',
-            id: history_id,
-            value: {
-                consultation_department: consultation_department.value,
-                chief_complaint: chief_complaint.value,
-                diagnosis: diagnosis.value,
-                treatment: treatment.value,
-                physical_pointer: physical_id
-            }
-        }, function(ret, err) {
-            if (ret) {
-                api.toast({
-                    msg: "修改病历成功！"
-                });
-                historyModiEvent(history_id);
-                api.closeWin();
-            } else {
-                alert("修改病历失败！");
-            }
-            hideProgress();
-        });
-    } else {
-        model.insert({
-            class: 'caseHistory',
-            value: {
-                record_date: getDate(),
-                consultation_department: consultation_department.value,
-                chief_complaint: chief_complaint.value,
-                diagnosis: diagnosis.value,
-                treatment: treatment.value,
-                record_doctor: userName,
-                patient_pointer: patient_id,
-                physical_pointer: physical_id
-            }
-        }, function(ret, err) {
-            if (ret) {
-                api.toast({
-                    msg: "新增病历成功！"
-                });
-                historyAddEvent(ret.id);
-                api.closeWin();
-            } else {
-                alert("新增病历失败！");
-            }
-            hideProgress();
-        });
-    }
-}
-
-/**
- * [openFrame description]
- * @param  {[type]} page [description]
- * @return {[type]}      [description]
- */
-function openWin(type) {
-    var data = {};
-    switch (type) {
-        case 'patient':
-            data = {
-                "id": patient_id
-            };
-            break;
-        case 'physical':
-            data = {
-                "id": physical_id
-            };
-            break;
-        default:
-            break;
-    }
-    api.openWin({
-        name: type,
-        url: './' + type + '.html',
-        pageParam: {
-            data: data
-        },
-        reload: true,
-        bounces: false,
+    api.openFrame({
+        name: "history",
+        url: './historyFrame.html',
+        pageParam: api.pageParam,
         vScrollBarEnabled: false,
+        reload: false,
+        bounces: false,
         animation: {
-            type: "movein",
-            subType: "from_right",
-            duration: 300
-        }
-    })
+            type: "fade",
+            duration: 0
+        },
+    });
 }
 
 </script>
