尽早将db分支合并，注释掉db新增的代码

--- a/widget/historyList.html
+++ b/widget/historyList.html
@@ -10,8 +10,8 @@
     <script type="text/javascript" src="./script/api.js"></script>
     <script type="text/javascript" src="./script/historyList.js"></script>
     <script type="text/javascript" src="./script/util.js"></script>
-    <script type="text/javascript" src="./script/historyDB.js"></script>
-    <script type="text/javascript" src="./script/historySql.js"></script>
+<!--     <script type="text/javascript" src="./script/historyDB.js"></script>
+    <script type="text/javascript" src="./script/historySql.js"></script> -->
 </head>
 
 <body class="body-silver">
