--- a/widget/html/patient.html
+++ b/widget/html/patient.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="../css/button.css" />
     <script type="text/javascript" src="../script/api.js"></script>
     <script type="text/javascript" src="../script/util.js"></script>
-    <script type="text/javascript" src="../script/historyDB.js"></script>
-    <script type="text/javascript" src="../script/historySql.js"></script>
+<!--     <script type="text/javascript" src="../script/historyDB.js"></script>
+    <script type="text/javascript" src="../script/historySql.js"></script> -->
 </head>
 
 <body class="body-silver">
